# autoattacker

./: .gitignore  README.md  program.md  pyproject.toml
autoattacker/: __init__.py  cli.py
autoattacker/adapters/: base.py
autoattacker/artifacts/: __init__.py  leaderboard.py  schema.py  writer.py
autoattacker/kernel/: archive.py  baseline.py  candidates.py  derived.py  eval.py  match.py  mutate.py  portfolio.py  regime.py  score.py  select.py
autoattacker/utils/: budget.py  io.py  reproducibility.py  seeds.py
runs/: campaign_results.tsv  frontier.json
runs/campaign-1b1797ed6c/: campaign_summary.md
runs/campaign-1b1797ed6c-i001-s007/: batch_summary.json  summary.md
runs/campaign-1b1797ed6c-i001-s011/: batch_summary.json  summary.md
runs/campaign-1b1797ed6c-i001-s019/: batch_summary.json  summary.md
runs/campaign-2725282554/: campaign_summary.md
runs/campaign-2725282554-i001-s007/: batch_summary.json  summary.md
runs/campaign-2725282554-i001-s011/: batch_summary.json  summary.md
runs/campaign-2725282554-i001-s019/: batch_summary.json  summary.md
runs/campaign-6d0f628b87-i001-s007/: batch_summary.json  summary.md
runs/campaign-6d0f628b87-i001-s011/: batch_summary.json  summary.md
runs/campaign-6d0f628b87-i001-s019/: batch_summary.json  summary.md
runs/campaign-6d0f628b87-i002-s007/: batch_summary.json  summary.md
runs/portability_shifted/: frontier.json  (+1 more)
tests/: test_adapter_contract.py  test_batch.py  test_campaign.py  test_candidates.py  test_cli.py  test_eval.py  test_frontier_state.py  test_mutate.py  test_regime.py  test_scoring.py
(+365 files in other folders)
