[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autoattacker"
version = "0.1.0"
description = "Portable attacker/defender autoresearch under fixed-budget match evaluations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
autoattacker = "autoattacker.cli:main"

[tool.setuptools]
packages = [
  "autoattacker",
  "autoattacker.kernel",
  "autoattacker.adapters",
  "autoattacker.adapters.toy_control",
  "autoattacker.artifacts",
  "autoattacker.utils",
]
