[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autoattacker"
version = "0.1.0"
description = "AI agents running attacker/defender research loops automatically under fixed-budget evaluations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
autoattacker = "autoattacker.cli:main"

[tool.setuptools]
packages = [
  "autoattacker",
  "autoattacker.kernel",
  "autoattacker.adapters",
  "autoattacker.adapters.toy_control",
  "autoattacker.artifacts",
  "autoattacker.utils",
]
